[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Feets.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 23, 5 )

[node name="Feets" type="Node2D"]
script = ExtResource( 1 )

[node name="Feet_L" type="Area2D" parent="."]
position = Vector2( 22, 6 )

[node name="Left" type="CollisionShape2D" parent="Feet_L"]
shape = SubResource( 1 )

[node name="Feet_R" type="Area2D" parent="."]
position = Vector2( -22, 6 )

[node name="Right" type="CollisionShape2D" parent="Feet_R"]
shape = SubResource( 2 )

[node name="Feet_M" type="Area2D" parent="."]

[node name="Middle" type="CollisionShape2D" parent="Feet_M"]
position = Vector2( 0, 6 )
shape = SubResource( 3 )

[connection signal="body_exited" from="Feet_L" to="." method="_on_body_exit" binds= [ true ]]
[connection signal="body_exited" from="Feet_R" to="." method="_on_body_exit" binds= [ false ]]
